--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Generated files
 .docusaurus
 .cache-loader
+/docs/Markdown Stuff.md
 
 # Misc
 .DS_Store
@@ -18,5 +19,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-docs/Markdown Stuff.md
