--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 # Generated files
 .docusaurus
 .cache-loader
-/docs/Markdown Stuff.md
 
 # Misc
 .DS_Store
@@ -19,3 +18,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+docs/Markdown Stuff.md
