--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@docusaurus/core": "^3.5.2",
     "@docusaurus/plugin-content-blog": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-player": "^2.16.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.5.2",
